[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/environment/Cannon.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/environment/cannon.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/cannon.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.88709, 5.5983 )

[sub_resource type="Animation" id=2]
resource_name = "fire"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 4, 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "load"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 4 ]
}

[node name="Cannon" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 2 )
anims/load = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"
[connection signal="body_entered" from="." to="." method="_on_Cannon_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
